--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-hello world!!
+Repository begun 17 March 2014
+To serve as a permanent and central location for my R scripts
+As my repertoir of R knowledge grows, I want a single place to keep scripts
